samples/_failures_safe/1761361651_565427_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aeec3f80.c: In function ‘main’:
./samples/SAFE/__tmp_aeec3f80.c:137:9: error: expected expression at end of input
  137 |         for (int j = 0; j <
      |         ^~~
./samples/SAFE/__tmp_aeec3f80.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aeec3f80.c:137:9: error: expected declaration or statement at end of input
